objects/Class_Action__c.object
<CustomObject>
    <fields>
        <fullName>Anfrage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Anfrage</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sammelklagen</relationshipLabel>
        <relationshipName>Sammelklagen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Court_Reference__c</fullName>
        <label>Gerichtliches Aktenzeichen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Court__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Landgericht</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Landgericht</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sammelklagen (Landgericht)</relationshipLabel>
        <relationshipName>Class_Actions_District_Court</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_up_Period__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Zeit bis Wiedervorlage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_My_Class_Action__c</fullName>
        <formula>$User.Id = Legal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Class Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lawsuit_Date__c</fullName>
        <label>Datum Klage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Anwalt</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00E0Y000000Hvm7</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00E0Y000000iPm5</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00E0Y000000Hvli</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00E0Y000000iPmA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Class_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Court_Date__c</fullName>
        <label>Nächster Gerichtstermin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Sammelklage_ID__c</fullName>
        <label>Old Sammelklage ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opponent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Gegner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Lebensversicherung, Fahrzeughersteller</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sammelklagen (Gegner)</relationshipLabel>
        <relationshipName>Class_Actions_Opponent</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opposing_Counsel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Korrespondenzanwalt</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Class_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Aktenzeichen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Lawsuit__c</fullName>
        <label>Antwort Klage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Ergebnis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Claim_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Class_Action_Statuses</valueSetName>
        </valueSet>
    </fields>
    <label>Sammelklage</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sammelklagen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reference__c</columns>
        <columns>Legal__c</columns>
        <columns>Opponent__c</columns>
        <columns>District_Court__c</columns>
        <columns>Result__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>CheckOpposingCounselAccountId</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Opponent__r.Id != Opposing_Counsel__r.AccountId,Opposing_Counsel__r.AccountId!=null)</errorConditionFormula>
        <errorDisplayField>Opposing_Counsel__c</errorDisplayField>
        <errorMessage>Korrespondenzanwalt muss Gegner zugeordnet sein.</errorMessage>
    </validationRules>
</CustomObject>